syntax = "proto3";
option csharp_namespace = "LinkService.Grpc";
package TinyLinks;

service LinkResolver
{
    rpc Resolve (ResolveRequestDTO) returns (ResolveReplyDTO);
}

message ResolveRequestDTO
{
    string Code = 1;
}

message ResolveReplyDTO
{
    string Url = 1;
    string LinkId = 2;
}